test-suite/cases/schema/errors/ext-type-type-mismatch.eure
// Invalid: $description is defined as text but given integer

input_eure = ```eure
name = "Alice"
name.$description = 42
```

schema = ```eure
name = `text`
name.$ext-type.description = `text`
```

schema_errors = [
  ```
error: Type mismatch: expected text, got integer at path $.name.$description
 --> <input>:1:1
  |
1 | name = "Alice"
  | ^^^^^^^^^^^^^^ Type mismatch: expected text, got integer at path $.name.$description
  |
note: constraint defined here
 --> <schema>:2:1
  |
2 | name.$ext-type.description = `text`
  | ----------------------------------- constraint defined here
```
]
